Changing some images formates

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
     <!-- Start Design -->
     <div class="design">
         <div class="image">
-            <img src="/images/mobile.png" alt="Mobile">
+            <img src="images/mobile.png" alt="mobile">
         </div>
         <div class="text">
             <h2>Our Design Comes With...</h2>
@@ -278,7 +278,7 @@
                 <p>Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet elit, eget
                     tincidunt.</p>
                 <div class="content">
-                    <img src="/images/skills-01.jpg" alt="">
+                    <img src="images/skills-01.jpg" alt="">
                     <div class="text">
                         Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet elit,
                         eget tincidunt.
@@ -286,7 +286,7 @@
                     </div>
                 </div>
                 <div class="content">
-                    <img src="/images/skills-02.jpg" alt="">
+                    <img src="images/skills-02.jpg" alt="">
                     <div class="text">
                         Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet elit,
                         eget tincidunt.
